task5/tests/group/output/test11.out
lli: <stdin>:28:1: error: expected instruction opcode
Visiting Cast Node
^
